--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,8 +14,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vite/client"]
   },
-  "include": ["src", "components"],
+  "include": ["src", "components", "services", "env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
